# cocaine-framework-native

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile  README.md  cocaine-framework-native-bf.spec  config.hpp.in  libcocaine-framework.version  main.cpp  manifest.json
cmake/: FindBlackhole.cmake  FindCocaine.cmake
debian/: changelog  cocaine-framework-cpp-dev.links  cocaine-framework-cpp.install  cocaine-framework-native-dev.links  cocaine-framework-native.install  control  copyright  libcocaine-framework-cpp-dev.install  libcocaine-framework-native-dev.links  libcocaine-framework-native1.install  rules
example/client/: CMakeLists.txt  main.cpp
example/echo/: CMakeLists.txt  main.cpp  manifest.json
example/http/: CMakeLists.txt  main.cpp  manifest.json
examples/: http.cpp  main.cpp  manifest.json  service_client.cpp
include/cocaine/framework/: application.hpp  basic_application.hpp  basic_stream.hpp  channel.hpp  common.hpp  config.hpp  connection.hpp  dispatch.hpp  dispatcher.hpp  encoder.hpp  error.hpp  factories.hpp  forwards.hpp  future.hpp  future_error.hpp  generator.hpp  handler.hpp  health.hpp  logger.hpp  logging.hpp  manager.hpp  message.hpp  receiver.hpp  receiver.inl.hpp  resolver.hpp  scheduler.hpp  sender.hpp  service.hpp  service.inl.hpp  service_error.hpp  service_impl.hpp  service_manager.hpp  session.hpp  stream.hpp  trace.hpp  trace_logger.hpp  upstream.hpp  user_application.hpp  worker.hpp
include/cocaine/framework/detail/: basic_session.hpp  channel.hpp  decoder.hpp  forwards.hpp  log.hpp  loop.hpp  net.hpp  resolver.hpp  runnable.hpp  scheduler.hpp  shared_state.hpp
include/cocaine/framework/detail/worker/: executor.hpp  session.hpp
include/cocaine/framework/future/: basic_promise.hpp  future.hpp  future_detail.hpp  future_error.hpp  packaged_task.hpp  promise.hpp  shared_state.hpp  traits.hpp  utility.hpp  variant.hpp
include/cocaine/framework/generator/: generator.hpp  generator_detail.hpp  shared_state.hpp  stream.hpp  traits.hpp
include/cocaine/framework/handlers/: functional.hpp  http.hpp
include/cocaine/framework/service_client/: connection.hpp  connection.inl  detail.hpp  error.hpp  handler.hpp  impl.hpp  manager.hpp  service.hpp  session.hpp  session.inl  status.hpp
include/cocaine/framework/services/: app.hpp  application.hpp  logger.hpp  storage.hpp
include/cocaine/framework/trace/: disabled.hpp  enabled.hpp
include/cocaine/framework/util/: future.hpp  net.hpp
include/cocaine/framework/util/future/: error.hpp  future.hpp  future_detail.hpp  packaged_task.hpp  promise.hpp  shared_state.hpp  traits.hpp  utility.hpp
include/cocaine/framework/worker/: dispatch.hpp  error.hpp  http.hpp  options.hpp  receiver.hpp  sender.hpp
include/cocaine/framework/worker/http/: request.hpp  response.hpp
rfc/: api.md  worker.md
src/: CMakeLists.txt  application.cpp  basic_application.cpp  basic_session.cpp  connection.cpp  decoder.cpp  dispatch.cpp  dispatcher.cpp  error.cpp  factories.cpp  function_handler.cpp  future.cpp  future_error.cpp  log.cpp  logger.cpp  manager.cpp  message.cpp  net.cpp  receiver.cpp  resolver.cpp  scheduler.cpp  sender.cpp  service.cpp  service_impl.cpp  service_manager.cpp  session.cpp  shared_state.cpp  trace.cpp  trace_logger.cpp  worker.cpp
src/handlers/: functional.cpp  http.cpp
src/service_client/: connection.cpp  manager.cpp  service.cpp
src/services/: logger.cpp
src/util/future/: error.cpp
src/worker/: dispatch.cpp  error.cpp  options.cpp  receiver.cpp  sender.cpp  session.cpp
tst/: CMakeLists.txt  connection.cpp  functional.cpp  main.cpp  mock.hpp  service.cpp  session.cpp  session_t.cpp
tst/cmake/: DownloadGoogleTesting.cmake
tst/func/manual/: service.cpp
tst/func/real/: connector.cpp  logging.cpp  service.cpp
tst/func/stub/: session.cpp
tst/load/: ab.cpp  ab.service.cpp  config.hpp  service.cpp  stats.cpp  stats.hpp  storage.cpp
tst/load/app/: echo.cpp  http.cpp
tst/load/service/: echo.cpp  storage.cpp
tst/mock/: event.hpp
tst/util/: env.hpp  net.cpp  net.hpp
