CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set(COCAINE_CORE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/../cocaine-core/cocaine-core)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include
    ${COCAINE_CORE_SOURCE_DIR}/include
    ${COCAINE_CORE_SOURCE_DIR}/foreign/asio/asio/include
    ${COCAINE_CORE_SOURCE_DIR}/foreign/blackhole/src
)

SET(Boost_USE_MULTITHREADED ON)

SET(PROJECT echo)

SET(HEADERS
)

SET(SOURCES
    main
)

PROJECT(${PROJECT})

ADD_EXECUTABLE(${PROJECT} ${SOURCES})
ADD_DEPENDENCIES(${PROJECT} googlemock)

TARGET_LINK_LIBRARIES(${PROJECT}
    ${CMAKE_THREAD_LIBS_INIT}
    ${Boost_LIBRARIES}
    cocaine-framework-cpp
)

ADD_DEFINITIONS(-std=c++0x)
